--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
 			<a>Our tokenomics includes several wallets where tokens will be stored, which will be used for various purposes so that our community and token rate grow rapidly.</a>
 			</div>	
     			<div class="figr">
+			<h3>Tokenomics</h3>
     			<img src="img/Figure1.svg" alt="Figure1" class="p1">
+			<h3>Tokenomics</h3>
     		    <img src="img/Figure2.svg" alt="Figure2" class="p1">
     		</div>	
     	</div>
