--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     		<div class="container">
     			<h3>Tokenomics</h3>
 			<div class="s-desk">
-			<a>Our tokenomics includes several wallets where tokens will be stored, which will be used for various purposes so that our community and token rate grow rapidly.</a>
+			<a>Our tokenomics includes several wallets where tokens will be stored, which will be used for various purposes so that our community and token rate grow rapidly</a>
 			</div>	
     			<div class="figr">
     			<img src="img/Figure1.svg" alt="Figure1" class="p1">
@@ -75,25 +75,25 @@
     	<div class = "container">
     	<h3>Ecosystem</h3>
 			<div class="s-desk">
-			<a>Our ecosystem so far includes only the AkitaRiver token, which has unique tokenomics and operating principles that will appeal to our entire community. For example, daily burning, lotteries and contests.</a>
+			<a>Our ecosystem so far includes only the AkitaRiver token, which has unique tokenomics and operating principles that will appeal to our entire community. For example, daily burning, lotteries and contests</a>
 			</div>			
             <div  class = "inf">
             <div  href="#" class = "block1">	
     				<h4>CONTESTS</h4>
                 	<p href="#" class = "btn1">
-    					We will hold various competitions for our community with prizes. This will help to increase loyalty to our project and increase the community of AkitaRiver.
+    					We will hold various competitions for our community with prizes. This will help to increase loyalty to our project and increase the community of AkitaRiver
     				</p>
     		</div>	
             <div href="#" class = "block2">
                 	<h4>BURNING</h4>
             		<p href="#" class = "btn1">
-            			We will burn 1% of the total supply of tokens daily to maintain the market balance (we will do this while we have enough tokens from commissions).
+            			We will burn 1% of the total supply of tokens daily to maintain the market balance (we will do this while we have enough tokens from commissions)
             		</p>	
             </div>  
             <div href="#" class = "block3">
             	<h4>TAX</h4>
     				<p href="#" class = "btn1">
-    					Each transaction is charged a 10% commission in AkitaRiver tokens. After that, they get to the main wallet, from which they are distributed to other wallets allocated for improving the project.
+    					Each transaction is charged a 10% commission in AkitaRiver tokens. After that, they get to the main wallet, from which they are distributed to other wallets allocated for improving the project
     				</p>	
             </div>		
     		</div>	
@@ -106,7 +106,7 @@
 		<div class="container">
 			<h3>Opportunities</h3>
 			<div class="s-desk">
-			<a> We will announce all contests in our social networks, so subscribe to us and stay up to date with all the events of the project.</a>
+			<a> We will announce all contests in our social networks, so subscribe to us and stay up to date with all the events of the project</a>
 			</div>	
 			<div class="description">
 				<div class="desc-left">
@@ -120,7 +120,7 @@
 
 3) 20% of the prize pool <br> <br>
 
-To participate in the lottery, you need to buy AkitaRiver for at least 0.2 MOVR (one transaction) on the day of the lottery.
+To participate in the lottery, you need to buy AkitaRiver for at least 0.2 MOVR (one transaction) on the day of the lottery
 					</p>
 				</div>
 				<div class="desc-right">
@@ -139,7 +139,7 @@ To participate in the lottery, you need to buy AkitaRiver for at least 0.2 MOVR 
 	<div class="container">
 		<h3>Roadmap</h3>
 			<div class="s-desk">
-			<a>We have drawn up a clear and consistent plan, which we will follow throughout the development of the project. We will also complement it, as necessary and as our community grows.</a>
+			<a>We have drawn up a clear and consistent plan, which we will follow throughout the development of the project. We will also complement it, as necessary and as our community grows</a>
 			</div>	
 	<div class="container1">
   <div class="timeline">
@@ -208,7 +208,7 @@ To participate in the lottery, you need to buy AkitaRiver for at least 0.2 MOVR 
 		<div class="container">
 			<h3>Frequently Questions</h3>
 			<div class="s-desk">
-			<a>We have provided answers to the main questions about the information on the site that you may have while reading.</a>
+			<a>We have provided answers to the main questions about the information on the site that you may have while reading</a>
 			</div>	
 
 			<div class="figr_q">
@@ -217,7 +217,7 @@ To participate in the lottery, you need to buy AkitaRiver for at least 0.2 MOVR 
 				<details class = "det">
 				  <summary class = "sum">How does tax work?</summary>
 				  <ul class="que">
-				    <p>Each transaction is charged <br class = "br">a 10% commission in AkitaRiver tokens.</p>
+				    <p>Each transaction is charged <br class = "br">a 10% commission in AkitaRiver tokens</p>
 				  </ul>
 				</details>
 				<details class = "det">
@@ -226,19 +226,19 @@ To participate in the lottery, you need to buy AkitaRiver for at least 0.2 MOVR 
 				    <p>AkitaRiver - community meme coin,<br class = "br">
 				     inspired by the famous token <br class = "br">of the same name on the ETH. <br> <br>
 				     Doge's and Shiba Inu's smaller brother<br class = "br">
-				     on the MoonRiver network.</p>
+				     on the MoonRiver network</p>
 				  </ul>
 				</details>
 				<details class = "det">
 				  <summary class = "sum">How can I participate in the lottery?</summary>
 				  <ul class="que">
-				    <p>To participate in the lottery, <br class = "br">you need to buy AkitaRiver<br class = "br"> for at least 0.2 MOVR<br class = "br"> (one transaction)<br class = "br"> on the day of the lottery.</p>
+				    <p>To participate in the lottery, <br class = "br">you need to buy AkitaRiver<br class = "br"> for at least 0.2 MOVR<br class = "br"> (one transaction)<br class = "br"> on the day of the lottery</p>
 				  </ul>
 				</details>
 				<details class = "det">
 				  <summary class = "sum">What contests will be there?</summary>
 				  <ul class="que">
-				    <p>We will announce all contests<br class = "br"> in our social networks.</p>
+				    <p>We will announce all contests<br class = "br"> in our social networks</p>
 				  </ul>
 				</details>
 				<details class = "det">
