--- a/index.html
+++ b/index.html
@@ -146,49 +146,49 @@ To participate in the lottery, you need to buy AkitaRiver for at least 0.2 MOVR 
     <ul>
       <li>
         <div class="timeline-content">
-          <h3 class="date">4th october, 2021</h3>
+          <h3 class="date">Step 1</h3>
           <h1>Development</h1>
           <p>• Conception of AkitaRiver Tokenomics and Vision <br>• Beginning of AkitaRiver development<br>• Logo, Social networks and website development<br>• AkitaRiver contract development </p>
         </div>
       </li>
       <li>
         <div class="timeline-content">
-          <h3 class="date">20th may, 2010</h3>
+          <h3 class="date">Step 2</h3>
           <h1>Beginning</h1>
           <p>• Contract deployment and test<br>• Phase 1 marketing campaign and advertising with influencers<br>• Launch of AkitaRiver on Moonswap dex (with an initial liquidity of 10 MOVR and a capitalization of ~4,500$)</p>
         </div>
       </li>
       <li>
         <div class="timeline-content">
-          <h3 class="date">20th may, 2010</h3>
+          <h3 class="date">Step 3</h3>
           <h1>Newborn puppy (50 holders)</h1>
           <p>• Phase 2 marketing campaign and a lot of crypto bloggers, for the rapid growth of the community<br>• Community-based marketing contests of the project (competitions in twitter, tiktok, YouTube and telegram with awards</p>
         </div>
       </li>
       <li>
         <div class="timeline-content">
-          <h3 class="date">20th may, 2010</h3>
+          <h3 class="date">Step 4</h3>
           <h1>Puppy (100 holders)</h1>
           <p>• Start of the daily lottery for our holders (conditions will be announced a little later)<br>• Listing on moonswap tokenlist<br>• Daily token burn </p>
         </div>
       </li>
        <li>
         <div class="timeline-content">
-          <h3 class="date">20th may, 2010</h3>
+          <h3 class="date">Step 5</h3>
           <h1>Teen-dog (200 holders)</h1>
           <p>• Adding a token to coin aggregator platforms (coinpaprika, livecoinwatch and coinhunt<br>• Listing on coingecko and coinmarketcap<br>• AMAs</p>
         </div>
       </li>
        <li>
         <div class="timeline-content">
-          <h3 class="date">20th may, 2010</h3>
+          <h3 class="date">Syep 6</h3>
           <h1>Adult dog (300 holders)</h1>
           <p>• Creation of nft's for our top holders, with which it will be possible to farm AkitaRiver<br>• Collaborations with other projects on the Moonriver network<br>• Phase 3 marketing campaign</p>
         </div>
       </li>
        <li>
         <div class="timeline-content">
-          <h3 class="date">20th may, 2010</h3>
+          <h3 class="date">Step 7</h3>
           <h1>Leader of a pack (400 holders)</h1>
           <p>Website version 2<br>Whitepaper development…</p>
         </div>
