--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ To participate in the lottery, you need to buy AkitaRiver for at least 0.2 MOVR 
       </li>
        <li>
         <div class="timeline-content">
-          <h3 class="date">Syep 6</h3>
+          <h3 class="date">Step 6</h3>
           <h1>Adult dog (300 holders)</h1>
           <p>• Creation of nft's for our top holders, with which it will be possible to farm AkitaRiver<br>• Collaborations with other projects on the Moonriver network<br>• Phase 3 marketing campaign</p>
         </div>
